# knowledge-hub-backend

./: README.md  globals.py  main.py  pyproject.toml  requirements.txt  temp
.github/: copilot-instructions.md
ai/: query_data.py  save_config.py
controllers/: __init__.py  chroma_controller.py
models/: schemas.py
routes/: chroma_routes.py
setup/: chroma.py  mongo.py
utils/: mongo.py  saving_image.py
